--- a/hu_aix_61_rn.adoc
+++ b/hu_aix_61_rn.adoc
@@ -25,7 +25,7 @@ The AIX Host Utilities enable you to connect an AIX host to NetApp storage. The 
 
 [NOTE]
 ====
-* For specific information about the operating system versions and updates that the Host Utilities support, see the link:http://support.netapp.com/NOW/products/ interoperability[Interoperability Matrix tool].
+* For specific information about the operating system versions and updates that the Host Utilities support, see the link:https://mysupport.netapp.com/matrix/imt.jsp?components=85803;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^].
 
 * For more information about PowerVM feature, see the IBM PowerVM Live Partition Mobility Red Book.
 ====
@@ -35,7 +35,7 @@ The Host Utilities software is packaged as a single, compressed file. You can do
 [NOTE]
 You must enable Dynamic Tracking for all FC and FCoE initiators for clustered Data ONTAP deployments.
 
-== AIX Host Utilities 6.1 new features
+== AIX Host Utilities 6.1 enhancements
 
 The release of the AIX Host Utilities 6.1 added following updates.
 
