--- a/hu_aix_61_rn.adoc
+++ b/hu_aix_61_rn.adoc
@@ -19,7 +19,7 @@ These Release Notes contain the latest information for the AIX Host Utilities 6.
 
 These Release Notes are updated when new information on using the AIX Host Utilities becomes available.
 
-== About the 6.1 release of the AIX Host Utilities
+== About the AIX Host Utilities 6.1 release
 
 The AIX Host Utilities enable you to connect an AIX host to NetApp storage. The AIX Host Utilities support multiple environments and the FC, FCoE, and iSCSI protocols. The  supported environments are AIX MPIO (Native OS) and PowerVM.
 
