--- a/hu_luhu_71_rn.adoc
+++ b/hu_luhu_71_rn.adoc
@@ -32,12 +32,12 @@ You can use the Host Utilities with the following versions of Linux:
 [NOTE]
 For specific information about the operating system versions and updates that the Host Utilities support, see the link:https://mysupport.netapp.com/matrix/imt.jsp?components=65623;64703;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^].
 
-The Host Utilities software is provided as both 32-bit and 64-bit .rpm  files. You can download the correct .rpm  file for your host architecture and the documentation from the NetApp Support Site.
+The Host Utilities software is provided as both 32-bit and 64-bit .rpm  files. You can download the correct .rpm  file for your host architecture and the documentation from the link:https://mysupport.netapp.com/site/[NetApp Support Site^].
 
 For instructions about installing and setting up, see the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_luhu_71.html[Linux Unified Host Utilities 7.1 Installation Guide] and link:https://docs.netapp.com/us-en/ontap-sanhost/hu_rhel_79.html[Using Red Hat Enterprise Linux 7.x with ONTAP].
 
 
-== What's new in 7.1 release
+== What's new in the 7.1 release
 
 Linux Host Utilities is now called _Linux Unified Host Utilities_ because it supports NetApp E-Series storage systems running SANtricity as well as AFF and FAS systems running ONTAP.
 
@@ -71,25 +71,18 @@ The Release Notes are updated between product releases as new information is ava
 
 === 7.1 enhancements
 
-*	The Recommended Host Settings for Linux Unified Host Utilities 7.1 topic has been updated to include SUSE Linux Enterprise Server 15 series.
-*	The Using Linux Host with ONTAP Storage topic has been updated to include SUSE Linux Enterprise Server 15 series.
-*	Adds support for 32 Gb Fibre Channel adapters from Emulex and Qlogic.
+*	This release includes support for the following:
+**	SUSE Linux Enterprise Server 15 series
+**	Oracle VM 3.2 series
+**	Oracle Linux 6 and 7 series
+**	Red Hat Enterprise Linux 6 and 7 series
+**	SUSE Linux Enterprise Server 11 SP4
+**	KVM and XEN, RHEV 6.4 and 6.5
+**	Citrix XenServer parameters
+
+*	Adds support for 32 GB Fibre Channel adapters from Emulex and Qlogic.
 *	Fixes `sanlun lun show -p getting SIGABRT` in SLES12SP1, OL7.2, RHEL7.2, and RHEL 6.8.
 *	Extends support for Red Hat Linux 6.8, Oracle Linux 6.8, XenServer 7.0, Oracle VM 3.3 series, and Oracle VM 3.4 series operating systems.
-
-=== 7.1 release updates
-
-*	You can now find information relating to ONTAP, SANtricity software in the Release Notes.
-*	The Recommended Host Settings for Linux Unified Host Utilities 7.1 document has been updated to include new information about Oracle VM 3.2 series, Oracle Linux 6 and 7 series, Red Hat Enterprise Linux 6 and 7 series, SUSE Linux Enterprise Server 11 SP4, SUSE Linux Enterprise Server 12 series, KVM and XEN, RHEV 6.4 and 6.5, and Citrix XenServer parameters.
-*	The Using Linux Host with ONTAP Storage document has been updated to include new information about Oracle Linux 6 and 7 series, Red Hat Enterprise Linux 6 and 7 series, SUSE Linux Enterprise Server 11 SP4, SUSE Linux Enterprise Server 12 series, and Citrix XenServer  parameters.
-*	The `sanlun fcp show adapter` command displays intermittent `error` text when Linux Host Utilities 6.2 is installed on a Brocade HBA or CNA host.
-
-*	The `sanlun` command does not display speed and firmware information with software FCoE on Intel cards.
-** (RHEL, FC) `sanlun` does not display speed and firmware information on Intel cards.
-** The firmware version and speed of Intel NIC card is not displayed with `sanlun fcp show adapter` command output.
-** The `sanlun fcp show adapter` command output does not display speed and firmware information about software FCoE with Intel NIC on RHEL hosts.
-+
-_Workaround_: To prevent this problem, use the `-fcoeadm` command to display the supported speed and firmware information.
 
 
 == Known Problems and Limitations
@@ -121,9 +114,9 @@ You can access documentation for all NetApp products and find other product info
 
 *Configuring and managing your ONTAP storage system*
 
-*	The link:https://docs.netapp.com/us-en/ontap/setup-upgrade/index.html[ONTAP Software Setup Guide] for your version of ONTAP
-*	The link:https://docs.netapp.com/us-en/ontap/san-management/index.html[ONTAP San Administration Guide] for your version of ONTAP
-*	The link:https://library.netapp.com/ecm/ecm_download_file/ECMLP2492508[ONTAP Release Notes] for your version of ONTAP
+*	The link:https://docs.netapp.com/us-en/ontap/setup-upgrade/index.html[ONTAP Software Setup Guide^] for your version of ONTAP
+*	The link:https://docs.netapp.com/us-en/ontap/san-management/index.html[ONTAP San Administration Guide^] for your version of ONTAP
+*	The link:https://library.netapp.com/ecm/ecm_download_file/ECMLP2492508[ONTAP Release Notes^] for your version of ONTAP
 
 *Configuring and managing your E-Series storage system*
 
@@ -135,7 +128,9 @@ You can access documentation for all NetApp products and find other product info
 
 Go to the link:https://docs.netapp.com/us-en/e-series/getting-started/index.html[E-Series documentation] to find SANtricity related documentation.
 
-link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[Supported Fibre Channel SAN topologies]
-link:https://mysupport.netapp.com/documentation/productlibrary/index.html?productID=61343[Configuring your host for Host Utilities]
-link:https://docs.netapp.com/us-en/ontap-sanhost/hu_rhel_85.html[Using Red Hat Enterprise Linux 8.x with ONTAP]
-link:https://docs.netapp.com/us-en/ontap-sanhost/hu_rhel_79.html[Using Red Hat Enterprise Linux 7.x with ONTAP]
+*Additional documentation*
+
+* link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[Supported Fibre Channel SAN topologies]
+* link:https://mysupport.netapp.com/documentation/productlibrary/index.html?productID=61343[Configuring your host for Host Utilities]
+* link:https://docs.netapp.com/us-en/ontap-sanhost/hu_rhel_85.html[Using Red Hat Enterprise Linux 8.x with ONTAP]
+* link:https://docs.netapp.com/us-en/ontap-sanhost/hu_rhel_79.html[Using Red Hat Enterprise Linux 7.x with ONTAP]
