minor link addition//Apr28

--- a/hu_luhu_71_rn.adoc
+++ b/hu_luhu_71_rn.adoc
@@ -20,7 +20,7 @@ These Release Notes contain the latest information for the Linux Unified Host Ut
 == About the Linux Unified Host Utilities 7.1 release
 The Linux Unified Host Utilities support several Linux operating systems as well as Veritas Storage Foundation. The Host Utilities enable you to connect a Linux host to NetApp storage systems.
 
-You can use the Host Utilities with the following versions of Linux:
+The Linux Unified Host Utilities 7.1 continues to support the following versions of Linux:
 
 *	Red Hat Enterprise Linux
 * SUSE Linux Enterprise Server
@@ -130,6 +130,7 @@ Go to the link:https://docs.netapp.com/us-en/e-series/getting-started/index.html
 
 *Additional documentation*
 
+* link:https://mysupport.netapp.com/documentation/productlibrary/index.html?productID=61343[Host Utilities documentation]
 * link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[Supported Fibre Channel SAN topologies]
 * link:https://mysupport.netapp.com/documentation/productlibrary/index.html?productID=61343[Configuring your host for Host Utilities]
 * link:https://docs.netapp.com/us-en/ontap-sanhost/hu_rhel_85.html[Using Red Hat Enterprise Linux 8.x with ONTAP]
