--- a/hu_luhu_71_rn.adoc
+++ b/hu_luhu_71_rn.adoc
@@ -15,10 +15,10 @@ summary: Release Notes for Linux Unified Host Utilities 7.1
 :imagesdir: ./media/
 
 [.lead]
-These Release Notes contain the latest information for the Linux Unified Host Utilities 7.1 release, including updates about known problems and limitations, information about tunable parameters, and any important cautions, and new features. The Release Notes also describe any issues that might have been discovered since the Host Utilities were released.
+This Release Notes document contains the latest information for the Linux Unified Host Utilities 7.1 release, including updates about known problems and limitations, any important cautions, new features, and enhancements. It also describes any issues that might have been discovered since the Host Utilities were released.
 
 == About the Linux Unified Host Utilities 7.1 release
-The Linux Unified Host Utilities support several Linux operating systems as well as Veritas Storage Foundation. The Host Utilities enable you to connect a Linux host to NetApp storage systems.
+The Linux Unified Host Utilities support several Linux operating systems. The Host Utilities enable you to connect a Linux host to NetApp storage systems.
 
 The Linux Unified Host Utilities 7.1 continues to support the following versions of Linux:
 
@@ -27,14 +27,14 @@ The Linux Unified Host Utilities 7.1 continues to support the following versions
 *	Oracle Linux
 *	Oracle VM
 *	Citrix XenServer
-*	Red Hat Enterprise Virtualization Hypervisor
+* Veritas
 
 [NOTE]
 For specific information about the operating system versions and updates that the Host Utilities support, see the link:https://mysupport.netapp.com/matrix/imt.jsp?components=65623;64703;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^].
 
 The Host Utilities software is provided as both 32-bit and 64-bit .rpm  files. You can download the correct .rpm  file for your host architecture and the documentation from the link:https://mysupport.netapp.com/site/[NetApp Support Site^].
 
-For instructions about installing and setting up, see the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_luhu_71.html[Linux Unified Host Utilities 7.1 Installation Guide] and link:https://docs.netapp.com/us-en/ontap-sanhost/hu_rhel_79.html[Using Red Hat Enterprise Linux 7.x with ONTAP].
+For instructions about installing and setting up, see the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_luhu_71.html[Linux Unified Host Utilities 7.1 Installation Guide].
 
 
 == What's new in the 7.1 release
@@ -49,17 +49,15 @@ Any mention of Host Utilities or Linux Host Utilities in this document refers to
 * The Linux Unified Host Utilities 7.1 continues to support versions of the following:
 
 ** Red Hat Enterprise Linux
-** Red Hat Enterprise Virtualization Hypervisor
 ** SUSE Linux Enterprise Server
-** Oracle VM
 ** Oracle Linux
+** Oracle VM
+** Citrix XenServer
 ** Veritas
-** InfoScale 7.0
 
 *	Red Hat Enterprise Linux 6 and 7 now have a tuned package with a `tuned-adm` command to set different server profiles on the host depending on the environment.
 **	This includes an enterprise storage profile for configurations where LUNs from enterprise storage arrays are used. You can also use the virtual guest profile for Red Hat Enterprise Linux as a guest virtual machine. Using these tuned packages can result in marked improvement in throughput and latency on ONTAP.
-+
-The link:https://docs.netapp.com/us-en/ontap-sanhost/hu_luhu_71.html[Linux Unified Host Utilities 7.1 Installation Guide] and link:https://docs.netapp.com/us-en/ontap-sanhost/hu_luhu_71.html#sample-command-reference[Linux Unified Host Utilities 7.1 quick command reference] topic provide explanations about the features.
+
 
 [NOTE]
 NetApp continues to work with the Host Utilities to add support for features after the initial release. For latest information about the features that are supported and the new features that have been added, see the link:https://mysupport.netapp.com/matrix/imt.jsp?components=65623;64703;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^].
@@ -100,12 +98,16 @@ Some keyword combinations and bug types that you might want to use include the f
 *	FCP - Linux
 *	iSCSI – Linux
 
+
+
+Refer to the link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[ONTAP SAN Host Configuration documentation] for more information on Host OS settings and configurations.
+
 == About SAN Host Configuration documentation
-Documentation for SAN Host Utilities is included in the ONTAP SAN Host Configuration documentation. ONTAP SAN HOST configuration documentation is cumulative, covering all current SAN HOST releases. Any functional differences across releases are noted in context.
+Documentation for SAN Host Utilities is included in the link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[ONTAP SAN Host Configuration documentation]. ONTAP SAN HOST configuration documentation is cumulative, covering all current SAN HOST releases. Any functional differences across releases are noted in context.
 
-== Default values recommended when using drivers bundled with Linux kernel
-When you are setting up an FC environment that uses the native, inbox drivers that are bundled with the Linux kernel, you can use the default values for the drivers. In iSCSI environments where you are using a iSCSI solution software, you need to manually set certain  recommended values depending on the OS version you are using. The recommendations are based on internal testing at NetApp. Refer to the link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[ONTAP SAN Host Configuration documentation] for more information on Host OS settings and configurations.
-
+=== Additional information
+==== Default values recommended when using drivers bundled with Linux kernel
+When you are setting up an FC environment that uses the native, inbox drivers that are bundled with the Linux kernel, you can use the default values for the drivers. In iSCSI environments where you are using a iSCSI solution software, you need to manually set certain  recommended values depending on the OS version you are using.
 
 == Where to find product documentation and other information
 You can access documentation for all NetApp products and find other product information resources, such as technical reports and white papers on the Product Documentation page of the NetApp corporate site.
@@ -127,11 +129,3 @@ You can access documentation for all NetApp products and find other product info
 *	The SANtricity Storage Manager Release Notes for your version of SANtricity.
 
 Go to the link:https://docs.netapp.com/us-en/e-series/getting-started/index.html[E-Series documentation] to find SANtricity related documentation.
-
-*Additional documentation*
-
-* link:https://mysupport.netapp.com/documentation/productlibrary/index.html?productID=61343[Host Utilities documentation]
-* link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[Supported Fibre Channel SAN topologies]
-* link:https://mysupport.netapp.com/documentation/productlibrary/index.html?productID=61343[Configuring your host for Host Utilities]
-* link:https://docs.netapp.com/us-en/ontap-sanhost/hu_rhel_85.html[Using Red Hat Enterprise Linux 8.x with ONTAP]
-* link:https://docs.netapp.com/us-en/ontap-sanhost/hu_rhel_79.html[Using Red Hat Enterprise Linux 7.x with ONTAP]
