--- a/hu_luhu_71_rn.adoc
+++ b/hu_luhu_71_rn.adoc
@@ -22,17 +22,17 @@ The Linux Unified Host Utilities support several Linux operating systems. The Ho
 
 The Linux Unified Host Utilities 7.1 continues to support the following versions of Linux:
 
-*	Red Hat Enterprise Linux
+* Red Hat Enterprise Linux
 * SUSE Linux Enterprise Server
-*	Oracle Linux
-*	Oracle VM
-*	Citrix XenServer
+* Oracle Linux
+* Oracle VM
+* Citrix XenServer
 * Veritas
 
 [NOTE]
 For specific information about the operating system versions and updates that the Host Utilities support, see the link:https://mysupport.netapp.com/matrix/imt.jsp?components=65623;64703;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^].
 
-The Host Utilities software is provided as both 32-bit and 64-bit .rpm  files. You can download the correct .rpm  file for your host architecture and the documentation from the link:https://mysupport.netapp.com/site/[NetApp Support Site^].
+The Host Utilities software is provided as both 32-bit and 64-bit .rpm files. You can download the correct .rpm  file for your host architecture and the documentation from the link:https://mysupport.netapp.com/site/[NetApp Support Site^].
 
 For instructions about installing and setting up, see the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_luhu_71.html[Linux Unified Host Utilities 7.1 Installation Guide].
 
@@ -70,20 +70,20 @@ The Release Notes are updated between product releases as new information is ava
 === 7.1 enhancements
 
 *	This release includes support for the following:
-**	SUSE Linux Enterprise Server 15 series
-**	Oracle VM 3.2 series
-**	Oracle Linux 6 and 7 series
-**	Red Hat Enterprise Linux 6 and 7 series
-**	SUSE Linux Enterprise Server 11 SP4
-**	KVM and XEN, RHEV 6.4 and 6.5
-**	Citrix XenServer parameters
+** SUSE Linux Enterprise Server 15 series
+** Oracle VM 3.2 series
+** Oracle Linux 6 and 7 series
+** Red Hat Enterprise Linux 6 and 7 series
+** SUSE Linux Enterprise Server 11 SP4
+** KVM and XEN, RHEV 6.4 and 6.5
+** Citrix XenServer parameters
 
 *	Adds support for 32 GB Fibre Channel adapters from Emulex and Qlogic.
 *	Fixes `sanlun lun show -p getting SIGABRT` in SLES12SP1, OL7.2, RHEL7.2, and RHEL 6.8.
 *	Extends support for Red Hat Linux 6.8, Oracle Linux 6.8, XenServer 7.0, Oracle VM 3.3 series, and Oracle VM 3.4 series operating systems.
 
 
-== Known Problems and Limitations
+== Known problems and limitations
 
 [cols=2,options="header", cols= "10, 30"]
 |===
@@ -95,8 +95,8 @@ link:https://mysupport.netapp.com/site/bugs-online/product[NetApp Bugs Online] p
 
 Some keyword combinations and bug types that you might want to use include the following:
 
-*	FCP - Linux
-*	iSCSI – Linux
+* FCP - Linux
+* iSCSI – Linux
 
 Refer to the link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[ONTAP SAN Host Configuration documentation] for more information on Host OS settings and configurations.
 
@@ -105,7 +105,7 @@ Documentation for SAN Host Utilities is included in the link:https://docs.netapp
 
 === Additional information
 ==== Default values recommended when using drivers bundled with Linux kernel
-When you are setting up an FC environment that uses the native, inbox drivers that are bundled with the Linux kernel, you can use the default values for the drivers. In iSCSI environments where you are using a iSCSI solution software, you need to manually set certain  recommended values depending on the OS version you are using.
+When you are setting up an FC environment that uses the native, inbox drivers that are bundled with the Linux kernel, you can use the default values for the drivers. In iSCSI environments where you are using a iSCSI solution software, you need to manually set certain recommended values depending on the OS version you are using.
 
 == Where to find product documentation and other information
 You can access documentation for all NetApp products and find other product information resources, such as technical reports and white papers on the Product Documentation page of the NetApp corporate site.
@@ -114,16 +114,16 @@ You can access documentation for all NetApp products and find other product info
 
 *Configuring and managing your ONTAP storage system*
 
-*	The link:https://docs.netapp.com/us-en/ontap/setup-upgrade/index.html[ONTAP Software Setup Guide^] for your version of ONTAP
-*	The link:https://docs.netapp.com/us-en/ontap/san-management/index.html[ONTAP San Administration Guide^] for your version of ONTAP
-*	The link:https://library.netapp.com/ecm/ecm_download_file/ECMLP2492508[ONTAP Release Notes^] for your version of ONTAP
+* The link:https://docs.netapp.com/us-en/ontap/setup-upgrade/index.html[ONTAP Software Setup Guide^] for your version of ONTAP
+* The link:https://docs.netapp.com/us-en/ontap/san-management/index.html[ONTAP SAN Administration Guide^] for your version of ONTAP
+* The link:https://library.netapp.com/ecm/ecm_download_file/ECMLP2492508[ONTAP Release Notes^] for your version of ONTAP
 
 *Configuring and managing your E-Series storage system*
 
-*	The SANtricity Storage Manager Configuration and Provisioning for Windows Express Guide that is appropriate for your protocol
-*	The SANtricity Storage Manager Configuration and Provisioning Express Guide for your operating system, protocol, and version of SANtricity.
-*	The SANtricity Storage Manager Software Installation Reference specific for your version of SANtricity.
-*	The SANtricity Storage Manager Multipath Driver's Guide specific for your version of SANtricity.
-*	The SANtricity Storage Manager Release Notes for your version of SANtricity.
+* The SANtricity Storage Manager Configuration and Provisioning for Windows Express Guide that is appropriate for your protocol
+* The SANtricity Storage Manager Configuration and Provisioning Express Guide for your operating system, protocol, and version of SANtricity.
+* The SANtricity Storage Manager Software Installation Reference specific for your version of SANtricity.
+* The SANtricity Storage Manager Multipath Driver's Guide specific for your version of SANtricity.
+* The SANtricity Storage Manager Release Notes for your version of SANtricity.
 
 Go to the link:https://docs.netapp.com/us-en/e-series/getting-started/index.html[E-Series documentation] to find SANtricity related documentation.
