--- a/hu_luhu_71_rn.adoc
+++ b/hu_luhu_71_rn.adoc
@@ -1,7 +1,7 @@
 ---
 sidebar: sidebar
 permalink: hu_luhu_71_rn.html
-keywords: host utilities, linux, 7.1, netapp, ontap
+keywords: host utilities, linux, 7.1, netapp, ontap, release, notes
 summary: Release Notes for Linux Unified Host Utilities 7.1
 ---
 
