--- a/hu_luhu_71_rn.adoc
+++ b/hu_luhu_71_rn.adoc
@@ -32,7 +32,7 @@ The Linux Unified Host Utilities 7.1 continues to support the following versions
 [NOTE]
 For specific information about the operating system versions and updates that the Host Utilities support, see the link:https://mysupport.netapp.com/matrix/imt.jsp?components=65623;64703;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^].
 
-The Host Utilities software is provided as both 32-bit and 64-bit .rpm  files. You can download the correct .rpm  file for your host architecture and the documentation from the link:https://mysupport.netapp.com/site/[NetApp Support Site^].
+The Host Utilities software is provided as both 32-bit and 64-bit .rpm  files. You can download the correct .rpm file for your host architecture and the documentation from the link:https://mysupport.netapp.com/site/[NetApp Support Site^].
 
 For instructions about installing and setting up, see the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_luhu_71.html[Linux Unified Host Utilities 7.1 Installation Guide].
 
@@ -56,7 +56,7 @@ Any mention of Host Utilities or Linux Host Utilities in this document refers to
 ** Veritas
 
 *	Red Hat Enterprise Linux 6 and 7 now have a tuned package with a `tuned-adm` command to set different server profiles on the host depending on the environment.
-**	This includes an enterprise storage profile for configurations where LUNs from enterprise storage arrays are used. You can also use the virtual guest profile for Red Hat Enterprise Linux as a guest virtual machine. Using these tuned packages can result in marked improvement in throughput and latency on ONTAP.
+** This includes an enterprise storage profile for configurations where LUNs from enterprise storage arrays are used. You can also use the virtual guest profile for Red Hat Enterprise Linux as a guest virtual machine. Using these tuned packages can result in marked improvement in throughput and latency on ONTAP.
 
 
 [NOTE]
@@ -69,7 +69,7 @@ The Release Notes are updated between product releases as new information is ava
 
 === 7.1 enhancements
 
-*	This release includes support for the following:
+* This release includes support for the following:
 **	SUSE Linux Enterprise Server 15 series
 **	Oracle VM 3.2 series
 **	Oracle Linux 6 and 7 series
@@ -95,8 +95,8 @@ link:https://mysupport.netapp.com/site/bugs-online/product[NetApp Bugs Online] p
 
 Some keyword combinations and bug types that you might want to use include the following:
 
-*	FCP - Linux
-*	iSCSI – Linux
+* FCP - Linux
+* iSCSI – Linux
 
 Refer to the link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[ONTAP SAN Host Configuration documentation] for more information on Host OS settings and configurations.
 
@@ -105,7 +105,7 @@ Documentation for SAN Host Utilities is included in the link:https://docs.netapp
 
 === Additional information
 ==== Default values recommended when using drivers bundled with Linux kernel
-When you are setting up an FC environment that uses the native, inbox drivers that are bundled with the Linux kernel, you can use the default values for the drivers. In iSCSI environments where you are using a iSCSI solution software, you need to manually set certain  recommended values depending on the OS version you are using.
+When you are setting up an FC environment that uses the native, inbox drivers that are bundled with the Linux kernel, you can use the default values for the drivers. In iSCSI environments where you are using a iSCSI solution software, you need to manually set certain recommended values depending on the OS version you are using.
 
 == Where to find product documentation and other information
 You can access documentation for all NetApp products and find other product information resources, such as technical reports and white papers on the Product Documentation page of the NetApp corporate site.
@@ -115,7 +115,7 @@ You can access documentation for all NetApp products and find other product info
 *Configuring and managing your ONTAP storage system*
 
 *	The link:https://docs.netapp.com/us-en/ontap/setup-upgrade/index.html[ONTAP Software Setup Guide^] for your version of ONTAP
-*	The link:https://docs.netapp.com/us-en/ontap/san-management/index.html[ONTAP San Administration Guide^] for your version of ONTAP
+*	The link:https://docs.netapp.com/us-en/ontap/san-management/index.html[ONTAP SAN Administration Guide^] for your version of ONTAP
 *	The link:https://library.netapp.com/ecm/ecm_download_file/ECMLP2492508[ONTAP Release Notes^] for your version of ONTAP
 
 *Configuring and managing your E-Series storage system*
