--- a/hu_ol_75.adoc
+++ b/hu_ol_75.adoc
@@ -109,6 +109,7 @@ NOTE: To configure Oracle Linux 7.5 RedHat Enterprise Kernel (RHCK), use the lin
 | Title
 | Description
 | Bugzilla ID
+| 1440718 | If you unmap or map a LUN without performing a SCSI rescan, it might lead to data corruption on the host. | When you set the 'disable_changed_wwids' multipath configuration parameter to YES, it disables access to the path device in the event of a WWID change. Multipath will disable access to the path device until the WWID of the path is restored to the WWID of the multipath device. To learn more, see  link:https://kb.netapp.com/Advice_and_Troubleshooting/Flash_Storage/AFF_Series/The_filesystem_corruption_on_iSCSI_LUN_on_the_Oracle_Linux_7[NetApp Knowledge Base: The filesystem corruption on iSCSI LUN on the Oracle Linux 7^]. | N/A
 | link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1177239[1177239^] | Kernel disruption observed on OL7.5 with Qlogic QLE2672 16G FC during storage failover operations |During storage failover operations on Oracle Linux 7 (OL7.5) with kernel 4.1.12-112.16.4.el7uek.x86_64 and the Qlogic QLE2672 HBA, you might observe kernel disruption. This prompts a reboot of the operating system which causes an application disruption.
 If kdump is configured, the kernel disruption creates a vmcore file in the  /var/crash/ directory. This disruption can be observed in the module “kmem_cache_alloc+118,” which is logged in the vmcore file and identified with the string "exception RIP: kmem_cache_alloc+118."
 After a kernel disruption, you can recover by rebooting the host operating system and restarting the application. |
@@ -119,3 +120,5 @@ NOTE: For Oracle Linux (Red Hat compatible kernel) known issues, see the link:hu
 == Release Notes
 
 include::_include/hu/reuse_hu_release_notes.adoc[]
+
+// BURT 1440718, 2022-05-20
