removing redundant sentence

--- a/hu_centos_72.adoc
+++ b/hu_centos_72.adoc
@@ -120,7 +120,7 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known Problems and Limitations
 
-For CentOS (Red Hat compatible kernel) known issues, see the link:hu_rhel_72.html#known-problems-and-limitations[known issues] for Red Hat Enterprise Linux (RHEL) 7.2.
+There are no known issues for CentOS 7.2
 
 == Release Notes
 
