--- a/hu_centos_72.adoc
+++ b/hu_centos_72.adoc
@@ -120,7 +120,7 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known Problems and Limitations
 
-There are no known issues for CentOS 7.2
+There are no known issues for CentOS 7.2.
 
 == Release Notes
 
