--- a/hu_centos_73.adoc
+++ b/hu_centos_73.adoc
@@ -120,7 +120,7 @@ include::_include/hu/reuse_hu_kvm_configuration.adoc[]
 
 == Known Problems and Limitations
 
-There are no known issues for CentOS 7.3
+There are no known issues for CentOS 7.3.
 
 == Release Notes
 
