--- a/hu_ol_79.adoc
+++ b/hu_ol_79.adoc
@@ -117,7 +117,7 @@ devices {
 }
 ----
 
-NOTE: To configure Oracle Linux 7.9 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_79.html#recommended-settings[recommended settings^] for Red Hat Enterprise Linux (RHEL) 7.9.
+NOTE: To configure Oracle Linux 7.9 RedHat Enterprise Kernel (RHCK), use the link:hu_rhel_79.html#recommended-settings[recommended settings] for Red Hat Enterprise Linux (RHEL) 7.9.
 
 == Known Problems and Limitations
 
